[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/chara/nitori/sm.png" type="Texture" id=1]
[ext_resource path="res://assets/chara/nitori/boom-Sheet.png" type="Texture" id=2]
[ext_resource path="res://enemy/nitori/projectile.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/nitori/explosion_04.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="Animation" id=4]
resource_name = "explode"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="projectile" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_layer = 1024
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 3
vframes = 3

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 64

[node name="shape" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )
disabled = true

[node name="hitbox2" type="Area2D" parent="."]
visible = false
collision_layer = 1024
collision_mask = 8

[node name="shape" type="CollisionShape2D" parent="hitbox2"]
shape = SubResource( 2 )
disabled = true

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="hitbox2" to="." method="_on_hitbox2_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
